manifest/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
# name: flux-system
  name: argocd
