manifest/ingress.apps.yaml
---

#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: guestbook
#  annotations:
#    ingress.kubernetes.io/ssl-redirect: "false"
#spec:
#  rules:
#  - http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: guestbook-ui
#            port:
#              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helm-guestbook
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.middlewares: example@kubernetescrd
#   kubernetes.io/ingress.class: traefik
#   traefik.ingress.kubernetes.io/rewrite-target: /
#   traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - http:
      paths:
      - path: /helm-guestbook
#     - path: /
        pathType: Prefix
        backend:
          service:
            name: helm-guestbook
            port:
              number: 80

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: example
spec:
  stripPrefix:
    prefixes:
      - "/helm-guestbook"
    forceSlash: false
