manifest/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: default

spec:
  stripPrefix:
    prefixes:
      - /helm-guestbook
      - /guestbook

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutebar

spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/helm-guestbook`)
    kind: Rule
    services:
    - name: helm-guestbook
      port: 80
    middlewares:
    - name: stripprefix
      namespace: default
  - match: PathPrefix(`/guestbook`)
    kind: Rule
    services:
    - name: guestbook-ui
      port: 80
    middlewares:
    - name: stripprefix
      namespace: default
